
There were subsequent reports that he complained that his aides were trying to goad him into a war with Iran that could contradict his campaign vow to avoid new Middle East entanglement.

If Iran or an Iranian proxy does turn out to be behind an attack that sent global oil prices soaring, there will be questions about the Islamic Republic's motivation and how it is calculating its response to Trump's policies.

The developments could suggest Iran has no intention of responding to any US overtures, following Trump's decision to pull out of the nuclear deal forged by his predecessor Barack Obama and the adoption of a "maximum pressure" sanctions campaign.

Iranian politics are notoriously difficult to judge from the outside. But the crisis could also indicate that factions in the Islamic Republic are seeking to squelch any political maneuvering room for any leaders who are open to talking to the US.

Rouhani did not specifically reference the attack on the Saudi facility in an address on Iran's Press TV Sunday but did accuse Americans of running a "war operation" by supporting the UAE and Saudi Arabia.

On Monday, an Iranian Foreign Ministry spokesman said that a meeting between Trump and Rouhani at the UN General Assembly in New York next week was not on the agenda but didn't directly rule it out.

Recent developments would seem to close Trump's latitude for a meeting. But the President cares little for convention and would love to spring a surprise.
I’m almost done w/ my job.
You w/ me? － yup
He went to the party w/o me.
I can’t live w/o you.
ILY hun.（I love you, honey）
Please return my call a.s.a.p.
I need your help a.s.a.p.
BTW, any plans for 2moro?
TGIF! I can’t wait for the weekend.
TGIF! － Yeah, I’m so happy! Have a nice weekend!
Don’t be scared. YOLO!
YOLO! Might as well enjoy it.
hey, r u there?
Sry, I was afk.
AFK, someone is calling me.
I’ll be afk for 5 mins.
Did u watch the video? lol.
Hang out 2nite?
OMG!

